--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-1.45MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇳 中国-375.9KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇺🇸 美国-2.75MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.16MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.93MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-321.5KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇸🇬 新加坡-1.56MB/s(Youtube:不良林), server: 161.117.224.49, port: 29235, type: vmess, uuid: 71090d6b-ae98-4b7e-8367-bc1c700a75c2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.09MB/s(Youtube:不良林), server: 54.214.170.7, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇺🇸 美国-1.55MB/s(Youtube:不良林), server: 62.216.91.229, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
+  - {name: 🇯🇵 日本-4.32MB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.26MB/s(Youtube:不良林), server: 62.216.91.229, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
+  - {name: 🇷🇺 俄罗斯联邦-389.8KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇺🇸 美国-2.38MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-270.6KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇷🇺 俄罗斯联邦-320.8KB/s(Youtube:不良林), server: 213.183.53.177, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
+  - {name: 🇷🇺 俄罗斯联邦-300.6KB/s(Youtube:不良林), server: 213.183.53.177, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
+  - {name: 🇺🇸 美国-2.23MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-4.23MB/s(Youtube:不良林), server: hkjh3r.zhs.company, port: 2053, type: vmess, uuid: 1e8f4847-dee6-35c1-bee8-122302ecb691, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /zhs, ws-headers: {Host: hkjh3r.zhs.company}}
+  - {name: 🇯🇵 日本-535.7KB/s(Youtube:不良林), server: jp04.vproxy.us, port: 56565, type: trojan, password: acf34fb3-6fed-40c6-b6ab-b5bedf5827a2, sni: jp04.vproxy.us, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-375.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-321.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.56MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-389.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-270.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-320.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-300.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-535.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-375.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-321.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.56MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-389.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-270.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-320.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-300.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-535.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-375.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-321.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.56MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-389.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-270.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-320.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-300.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-535.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-4.23MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-375.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-321.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.56MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-389.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-270.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-320.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-300.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-535.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-375.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-321.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.56MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-389.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-270.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-320.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-300.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-535.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-375.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-321.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.56MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-389.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-270.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-320.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-300.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-535.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-375.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-321.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.56MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-389.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-270.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-320.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-300.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.23MB/s(Youtube:不良林)
+      - 🇯🇵 日本-535.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
