--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-4.32MB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
-  - {name: 🇷🇺 俄罗斯联邦-357.3KB/s(Youtube:不良林), server: 213.183.53.177, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
-  - {name: 🇷🇺 俄罗斯联邦-300.6KB/s(Youtube:不良林), server: 213.183.53.177, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
-  - {name: 🇷🇺 俄罗斯联邦-320.8KB/s(Youtube:不良林), server: 213.183.53.177, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
-  - {name: 🇦🇺 澳大利亚-2.00MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.23MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-4.23MB/s(Youtube:不良林), server: hkjh3r.zhs.company, port: 2053, type: vmess, uuid: 1e8f4847-dee6-35c1-bee8-122302ecb691, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /zhs, ws-headers: {Host: hkjh3r.zhs.company}}
-  - {name: 🇯🇵 日本-535.7KB/s(Youtube:不良林), server: jp04.vproxy.us, port: 56565, type: trojan, password: acf34fb3-6fed-40c6-b6ab-b5bedf5827a2, sni: jp04.vproxy.us, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-933.0KB/s(Youtube:不良林), server: jp1.v2yyds.cc, port: 32111, type: trojan, password: c0669346-7ba9-4fda-91a4-238fb8d0a4d2, sni: jp1.v2yyds.cc, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-732.2KB/s(Youtube:不良林), server: 43.200.6.115, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇷🇺 俄罗斯联邦-441.2KB/s(Youtube:不良林), server: 213.183.53.177, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇷🇺 俄罗斯联邦-327.7KB/s(Youtube:不良林), server: 213.183.53.177, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
+  - {name: 🇷🇺 俄罗斯联邦-326.9KB/s(Youtube:不良林), server: 213.183.53.177, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
+  - {name: 🇺🇸 美国-1.61MB/s(Youtube:不良林), server: fhcarm2.gaox.ml, port: 443, type: trojan, password: f39bd244-f5fe-415c-8b98-a1e5250bf178, sni: fhcarm2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-6.27MB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-323.8KB/s(Youtube:不良林), server: 213.183.53.177, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
+  - {name: 🇨🇳 中国-3.17MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-477.6KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇺🇸 美国-3.00MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-2.50MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-4.32MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-357.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-300.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-320.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-535.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-933.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-732.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-441.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-327.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-326.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.27MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-323.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-477.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.50MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-4.32MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-357.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-300.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-320.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-535.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-933.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-732.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-441.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-327.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-326.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.27MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-323.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-477.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.50MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-4.32MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-357.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-300.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-320.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-535.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-933.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-732.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-441.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-327.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-326.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.27MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-323.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-477.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.50MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-4.23MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-4.32MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-357.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-300.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-320.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-535.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-933.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-732.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-441.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-327.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-326.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.27MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-323.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-477.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.50MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-4.32MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-357.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-300.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-320.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-535.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-933.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-732.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-441.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-327.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-326.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.27MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-323.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-477.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.50MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-4.32MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-357.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-300.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-320.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-535.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-933.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-732.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-441.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-327.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-326.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.27MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-323.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-477.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.50MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-4.32MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-357.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-300.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-320.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-535.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-933.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-732.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-441.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-327.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-326.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.27MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-323.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-477.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.50MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
