--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.83MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.65MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.92MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 塞浦路斯-394.2KB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
-  - {name: 🇰🇷 韩国-318.0KB/s(Youtube:不良林), server: 13.125.218.170, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇷🇺 俄罗斯联邦-504.9KB/s(Youtube:不良林), server: 213.183.53.177, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
-  - {name: 🇷🇺 俄罗斯联邦-471.2KB/s(Youtube:不良林), server: 213.183.53.177, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
-  - {name: 🇷🇺 俄罗斯联邦-465.2KB/s(Youtube:不良林), server: 213.183.53.177, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
-  - {name: 🇷🇺 俄罗斯联邦-345.9KB/s(Youtube:不良林), server: 213.183.53.177, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
+  - {name: 🇨🇳 中国-7.66MB/s(Youtube:不良林), server: 36.156.219.92, port: 10199, type: ss, cipher: chacha20-ietf-poly1305, password: 49bd189b-9531-4d21-a3f9-95a099ceaad2}
+  - {name: 🇦🇺 澳大利亚-348.5KB/s(Youtube:不良林), server: neteasy.ga, port: 28931, type: trojan, password: MnROfwtPYa, sni: neteasy.ga, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-417.1KB/s(Youtube:不良林), server: 213.183.53.177, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
+  - {name: 🇺🇸 美国-3.39MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-381.4KB/s(Youtube:不良林), server: 213.183.53.177, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
+  - {name: 🇬🇧 英国-1.89MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-672.9KB/s(Youtube:不良林), server: v1.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v1.ssrsub.com}}
+  - {name: 🇺🇸 美国-395.0KB/s(Youtube:不良林), server: app.ssfree.ru, port: 443, type: vmess, uuid: fb060b62-dfcc-11ec-9339-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: app.ssfree.ru}}
+  - {name: 🇺🇸 美国-361.4KB/s(Youtube:不良林), server: 43.200.6.115, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇬🇧 英国-856.7KB/s(Youtube:不良林), server: s3.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s3.upyun.online, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.92MB/s(Youtube:不良林)
-      - 塞浦路斯-394.2KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-318.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-504.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-471.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-465.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-345.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.66MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-348.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-417.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-381.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-672.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-395.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-361.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-856.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.92MB/s(Youtube:不良林)
-      - 塞浦路斯-394.2KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-318.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-504.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-471.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-465.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-345.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.66MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-348.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-417.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-381.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-672.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-395.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-361.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-856.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.92MB/s(Youtube:不良林)
-      - 塞浦路斯-394.2KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-318.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-504.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-471.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-465.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-345.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.66MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-348.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-417.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-381.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-672.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-395.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-361.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-856.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.92MB/s(Youtube:不良林)
-      - 塞浦路斯-394.2KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-318.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-504.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-471.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-465.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-345.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.66MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-348.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-417.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-381.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-672.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-395.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-361.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-856.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.92MB/s(Youtube:不良林)
-      - 塞浦路斯-394.2KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-318.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-504.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-471.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-465.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-345.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.66MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-348.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-417.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-381.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-672.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-395.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-361.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-856.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.92MB/s(Youtube:不良林)
-      - 塞浦路斯-394.2KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-318.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-504.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-471.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-465.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-345.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.66MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-348.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-417.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-381.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-672.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-395.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-361.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-856.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.92MB/s(Youtube:不良林)
-      - 塞浦路斯-394.2KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-318.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-504.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-471.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-465.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-345.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.66MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-348.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-417.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-381.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-672.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-395.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-361.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-856.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
